src/objects/Computer_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Computer Inventories</relationshipLabel>
        <relationshipName>Contact_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Computer Inventories</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Number__c</fullName>
        <label>Inventory Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Computer Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Computer Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Value_field_validation</fullName>
        <active>true</active>
        <errorConditionFormula>Value__c &lt;0</errorConditionFormula>
        <errorDisplayField>Value__c</errorDisplayField>
        <errorMessage>Value cannot be&lt;0</errorMessage>
    </validationRules>
</CustomObject>